--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <header>
     <ul id="js-triggers">
       <li><a href="#">Show Menu</a></li>
-      <li><a href="#">Show Modal</a>
+      <li><a href="#"class="modal_button">Show Modal</a>
         <div class="modal-panel">
           <div class="modal-content-pane">
             <div class="modal-content"></div>
